src/objects/Apttus__IDEJob__c.object
<CustomObject>
    <description>IDE Job table, which will be used to communicate to KIRA based on different job status</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>IDE Jobs</relationshipLabel>
        <relationshipName>IDEJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementPreviousStatusCategory__c</fullName>
        <description>This field stores the former Agreement Status Category</description>
        <inlineHelpText>Previous status category of the Agreement</inlineHelpText>
        <label>Agreement Previous Status Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementPreviousStatus__c</fullName>
        <description>This field stores the former Agreement Status</description>
        <inlineHelpText>Previous status of the Agreement</inlineHelpText>
        <label>Agreement Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AnalysedAttachmentId__c</fullName>
        <description>ID of the Analyzed Attachment/File received from the IDE</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the Analyzed Attachment/File received from the IDE</inlineHelpText>
        <label>Analyzed Attachment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AnalysedHighlightedAttachmentId__c</fullName>
        <description>Analyzed Highlighted Attachment/file Id receive from IDE</description>
        <inlineHelpText>Please provide analyzed highlighted attachment/file ID receive from IDE</inlineHelpText>
        <label>Analysed Highlighted Attachment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AttachmentId__c</fullName>
        <description>ID of the Attachment or File</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the Attachment or File</inlineHelpText>
        <label>Attachment/File</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AttachmentName__c</fullName>
        <description>Name of the Uploaded Attachment or File</description>
        <inlineHelpText>Name of the Uploaded Attachment or File</inlineHelpText>
        <label>Attachment/File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception__c</fullName>
        <description>Error reported by KIRA</description>
        <inlineHelpText>Error reported by KIRA</inlineHelpText>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExtractedJSONDocId__c</fullName>
        <description>ID of the extracted JSON Document received from KIRA</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the extracted JSON Document received from KIRA</inlineHelpText>
        <label>Extracted JSON Doc Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ExtractedJSON__c</fullName>
        <description>The extracted JSON string containing the mapped clause/field information</description>
        <inlineHelpText>The extracted JSON string containing the mapped clause/field information</inlineHelpText>
        <label>Extracted JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__IsTextMatchAlgorithmRun__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if text-match algorithm is run or not</description>
        <inlineHelpText>Flag to indicate if text-match algorithm is run or not</inlineHelpText>
        <label>Is Text Match Algorithm Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IsUnzipRequireHighlighted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if unzip is required or not</description>
        <inlineHelpText>Flag to indicate if unzip is required or not</inlineHelpText>
        <label>Is Unzip Require Highlighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IsUnzipRequire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether unzip is required or not</description>
        <inlineHelpText>Indicates whether unzip is required or not</inlineHelpText>
        <label>Is Unzip Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__JobDetail__c</fullName>
        <description>Additional detail of the job</description>
        <inlineHelpText>Additional detail of the job</inlineHelpText>
        <label>Job Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__JobStatus__c</fullName>
        <description>The Job Status</description>
        <inlineHelpText>The Job Status</inlineHelpText>
        <label>Job Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__JobType__c</fullName>
        <description>The Job Type</description>
        <externalId>true</externalId>
        <inlineHelpText>The Job Type</inlineHelpText>
        <label>Job Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Language__c</fullName>
        <description>Language of the Document being imported.</description>
        <inlineHelpText>This field displays the Language of the document imported.</inlineHelpText>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Mutex__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Mutex variable to ensure only one process may work with the record at a time</description>
        <inlineHelpText>Mutex variable to ensure only one process may work with the record at a time</inlineHelpText>
        <label>Mutex</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__NumberOfPages__c</fullName>
        <description>The number of pages of the Document being imported.</description>
        <inlineHelpText>This field displays the Number of pages the document imported.</inlineHelpText>
        <label>Number Of Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__RetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times the IDE job needs to be rerun in case of failure</description>
        <inlineHelpText>Provide the IDE job retry count</inlineHelpText>
        <label>RetryCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__ReviewURL__c</fullName>
        <description>The Review url received from KIRA</description>
        <inlineHelpText>The Review url received from KIRA</inlineHelpText>
        <label>Review URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ScanQuality__c</fullName>
        <description>Scan quality of the document</description>
        <inlineHelpText>Scan quality of the document</inlineHelpText>
        <label>Scan Quality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__SourceUseCase__c</fullName>
        <defaultValue>&quot;Create Offline Agreement&quot;</defaultValue>
        <description>Indicates the use case for which the record is created</description>
        <inlineHelpText>Indicates the use case for which the record is created</inlineHelpText>
        <label>Source Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Import Offline</fullName>
                </value>
                <value>
                    <fullName>Save and Stored Execute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IDE Job</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>